--- a/src/app.css
+++ b/src/app.css
@@ -6,9 +6,190 @@ body {
   min-height: 100vh;
 }
 
+ul {
+  margin-bottom: 0;
+}
+
 .home-app {
   height: 100vh;
 }
 .home-app .btn {
   min-width: 200px;
+}
+
+.quiz-top-area {
+  padding: 20px 0px;
+  background-color: #262626;
+}
+
+.quiz-top-area .quiz-countdown li {
+  width: 70px;
+  height: 52px;
+  margin-left: 12px;
+  border-radius: 8px;
+  position: relative;
+  display: inline-block;
+  background-color: #e6e6e6;
+}
+.quiz-top-area .quiz-countdown .count-down-number {
+  font-size: 38px;
+  line-height: 50px;
+}
+.quiz-top-area .quiz-countdown .count-unit {
+  display: block;
+  color: #ed1b34;
+  margin-top: 5px;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+.quiz-top-area .quiz-countdown li:after {
+  top: 0;
+  right: -10px;
+  content: ":";
+  color: #ed1b34;
+  font-size: 30px;
+  position: absolute;
+}
+
+.quiz-top-area .quiz-countdown li:last-child:after {
+  display: none;
+}
+
+.quiz-main-area {
+  padding: 90px 30px;
+}
+.quiz-title {
+  margin: 0 auto;
+  max-width: 800px;
+}
+.quiz-title h2 {
+  color: #151515;
+  font-size: 43px;
+  font-weight: 700;
+  padding-bottom: 20px;
+  font-family: "Poppins";
+}
+.quiz-title span {
+  font-size: 25px;
+  color: #ed1b34;
+}
+.quiz-title p {
+  color: #151515;
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.quiz-option-selector {
+  margin: 0 auto;
+  max-width: 1135px;
+  padding-top: 40px;
+  padding-bottom: 80px;
+}
+.quiz-option-selector li {
+  width: 50%;
+  float: left;
+  padding: 7px;
+  list-style-type: none;
+}
+.quiz-option-selector li label {
+  z-index: 2;
+  width: 100%;
+  height: 90px;
+  padding: 10px;
+  cursor: pointer;
+  position: relative;
+  border-radius: 4px;
+  background-color: #fff;
+  border: 2px solid #e7e7e7;
+}
+.quiz-option-selector li .exp-option-box {
+  display: none;
+}
+.quiz-option-selector li label .exp-number {
+  float: left;
+  width: 75px;
+  height: 68px;
+  z-index: 2;
+  display: block;
+  color: #446d76;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 68px;
+  position: relative;
+  margin-right: 45px;
+  text-align: center;
+  background-color: #fff;
+  border: 2px solid #e7e7e7;
+}
+.quiz-option-selector li label .exp-label {
+  z-index: 2;
+  color: #446d76;
+  font-size: 23px;
+  font-weight: 600;
+  line-height: 70px;
+  position: relative;
+}
+.quiz-option-selector li label .checkmark-border {
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  position: absolute;
+}
+
+.quiz-option-selector li label .checkmark-border:before,
+.quiz-option-selector li label .checkmark-border:after {
+  top: 0;
+  left: 0;
+  z-index: -1;
+  content: "";
+  width: 100%;
+  height: 100%;
+  display: none;
+  border-radius: 4px;
+  position: absolute;
+  background-image: linear-gradient(14deg, #eb3252 0%, #f82c28 100%);
+}
+.quiz-option-selector li .exp-option-box:checked ~ .checkmark-border:before,
+.quiz-option-selector li .exp-option-box:checked ~ .checkmark-border:after {
+  display: block;
+}
+.quiz-option-selector li label .checkmark-border:after {
+  background-image: inherit;
+  box-shadow: 0px 1px 38px 0px rgb(2 2 2 / 27%);
+}
+.quiz-option-selector li .exp-option-box:checked ~ .exp-label {
+  color: #fff;
+}
+
+.quiz-next-prev-btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  border-radius: 4px;
+  padding: 20px 30px;
+  background-color: #3c3c3c;
+}
+
+.quiz-next-prev-btn button {
+  color: #3c3c3c;
+  height: 65px;
+  width: 250px;
+  font-size: 18px;
+  font-weight: 700;
+  cursor: pointer;
+  text-align: center;
+  line-height: 65px;
+  border-radius: 3px;
+  display: inline-block;
+  background-color: #fff;
+  text-transform: uppercase;
+  transition: 0.3s all ease-in-out;
+  font-size: 18px;
+  font-weight: 700;
+  cursor: pointer;
+  text-align: center;
+  border: none;
 }
